fix: removendo rota desnecessária
